# colorization

./: .gitignore  data.py  main.ipynb  pyproject.toml  simpleNET.py
GAN/: discriminator.py  generator.py
simpleNET/: simpleCNN-W.pt  simpleNET.py
