[project]
name = "colorization"
version = "0.1.0"
description = ""
authors = [
    {name = "Qwest1204",email = "128bit@128bit.xyz"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook (>=7.3.3,<8.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchinfo (>=1.8.0,<2.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
